--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
     <!--googolefonts CSS-->
-    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="stylesheet.css">
 
     <title>portfolio</title>
@@ -52,12 +52,12 @@
         <!--profile-->
         <div id="Profile">
             <h4 class="p-3 mb-3 bg-white"></h4>
-            <h2 class="text-center py-3 mb-md-4 display-1">Profile</h2>
+            <h2 class="text-center py-3 mb-md-4 display-1 ">Profile</h2>
         </div>
         <div class="row">
             <div class="col-md-4 col-12">
                 <div class="mx-5">
-                    <img class="img-fluid rounded-circle" src="img/cat.png" alt="">
+                    <img class="img-fluid rounded-circle" src="img/idPhot2.JPG" alt="">
                 </div>
                 <p class="text-center py-1 m-4">
                     黒木 研次
@@ -66,52 +66,82 @@
             </div>
             <div class="col-md-8 col-12">
                 <div class="py-4">
-                    <h5 class="d-inline-block py-12">
-                        現在は営業職に就おりますが、転勤しない働き方がしたいと思い転職活動を始めました。
-                        <br>ものづくりでユーザーの生活を便利にするエンジニアという職種は大変やりがいのある仕事だと思い志望させていただいております。
-                        <br>現在スクールにてPHPを専攻して学んでいます。
+                    <h5 class="d-inline-block py-5 mr-5">
+                        現在は営業職に就おりますが、場所に囚われない新しい働き方を求めて転職活動を始めました。
+                        <br>スクールでPHPを中心に学んでおります。コーディングによって便利で豊かな生活を提供するエンジニアは、大変魅力的でやりがいのある職種だと感じております。
                     </h5>
                 </div>
             </div>
         </div>
+
         <!--Skills-->
         <div id="Skills">
-            <h4 class="p-1 mb-1 bg-white"></h4>
-            <h2 class="text-center mt-lg-5 mb-md-5 display-1 py-3 ">Skills</h2>
+            <h4 class="p-1 mb-1 bg-white "></h4>
+            <h2 class="text-center mt-lg-5 mb-md-5 display-1 py-3">Skills</h2>
         </div>
-        <div class="row">
-            <div class="col-md-4 col-sm-4 col-12">
-                <a href=”samurai/bootstrap/index.html”><img class="img-fluid" src="img/d.jpg" alt=""></a>
-                <p>
-                    HTML/CSS
-                    <br>レスポンシブ対応されたサイトのコーディングができます。
-                </p>
+
+        <div class="row justify-content-center">
+            <div class="card mb-4 mx-3" style="width: 18rem;">
+                <img src="img/d.jpg" class="card-img-top img-thumbnail mt-2" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">HTML/CSS</h5>
+                    <p class="card-text">レスポンシブに対応したサイトのコーディングができます。</p>
+                    <a href="samurai/bootstrap/index.html" class="btn btn-primary">Go somewhere</a>
+                </div>
             </div>
-            <div class="col-md-4 col-sm-4 col-12">
-                <img class="img-fluid" src="img/f.jpg" alt="">
-                <p>JavaScript
-                </p>
+            <div class="card mb-4 mx-3" style="width: 18rem;">
+                <img src="img/f.jpg" class="card-img-top img-thumbnail mt-2" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">JavaScript</h5>
+                    <p class="card-text">変数、メソッドやクラス、DOM操作などを活用して動的な表現を実装できます。
+                    </p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
             </div>
-            <div class="col-md-4 col-sm-4 col-12">
-                <img class="img-fluid" src="img/bootstrap.png" alt="">
-                <p>Bootstrap</p>
+            <div class="card mb-4 mx-3" style="width: 18rem;">
+                <img src="img/bootstrap.png" class="card-img-top img-thumbnail mt-2" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Bootstrap</h5>
+                    <p class="card-text">フレームワークを使用してwebサイトの作成ができます。</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
             </div>
-            <div class="col-md-4 col-sm-4 col-12">
-                <img class="img-fluid" src="img/e.jpg" alt="">
-                <p>JQuely</p>
+            <div class="card mb-4 mx-3" style="width: 18rem;">
+                <img src="img/e.jpg" class="card-img-top img-thumbnail mt-2" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">jQuely</h5>
+                    <p class="card-text">jQueryを使用して動的な表現を実装できます。</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
             </div>
-            <div class="col-md-4 col-sm-4 col-12">
-                <img class="img-fluid" src="img/e.jpg" alt="">
-                <p>PHP</p>
+            <div class="card mb-4 mx-3" style="width: 18rem;">
+                <img src="img/e.jpg" class="card-img-top img-thumbnail mt-2" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">PHP</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
             </div>
-            <div class="col-md-4 col-sm-4 col-12">
-                <img class="img-fluid" src="img/e.jpg" alt="">
-                <p>Lalavel</p>
+            <div class="card mb-4 mx-3" style="width: 18rem;">
+                <img src="img/e.jpg" class="card-img-top img-thumbnail mt-2" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Lalavel</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+
             </div>
-            <p class="py-3">営業職にてコミュニケーション能力、リーダーシップやマネジメントを学びました。営業職で得た社会人としてのスキルはどの現場でも役に立つものだと考えております。
-                プログラミングに関してはは独学とスクールで７ヶ月学習しており、プログラミングだけでなくgithubでバージョン管理、共同作業の方法も学んでいます。</p>
+        </div>
+        <div>
+            <p class="py-3 mx-5">営業職にてコミュニケーション能力、リーダーシップやマネジメントを学びました。営業職で得たスキルはどの職種でも役に立つものだと考えております。
+                <br>プログラミングに関してはは独学とスクールで７ヶ月学習しており、コーディングだけでなくgithubでバージョン管理、共同作業の方法等エンジニアに必要な知識も学ばせていただいております。
+            </p>
         </div>
         　　　
+
+
         <!--Works-->
         <div id="Works">
             <h4 class="p-1 mb-1 bg-white"></h4>
@@ -120,8 +150,9 @@
         <div>
             <div class="d-flex flex-wrap justify-content-center">
                 <div class="col-md-12 col-12 p-0 align-self-center">
-                    <img class="img-fluid" src="img/g.jpeg">
-                    <p class="py-3">作成したアプリの説明作成したアプリの説明作成したアプリの説明</p>
+                    <img class="img-fluid img-thumbnail" src="img/g.jpeg">
+                    <p class="py-3">
+                        日々の営業職でもっと使いやすいTODOリストのアプリケーションがあればと思い作成しました。ルート営業職は反復行為が多いため、そういったニーズに合うように工夫しました。</p>
                 </div>
             </div>
         </div>
