--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!--googolefonts CSS-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="stylesheet.css">
-    
+
 
     <title>portfolio</title>
 </head>
@@ -51,115 +51,124 @@
     <div class="container bg-white py-5 mt-2 mb-5">
 
         <!--profile-->
-        <div id="Profile">
-            <h4 class="p-3 mb-3 bg-white"></h4>
-            <h1 class="text-center py-3 mb-md-4 display-1 ">Profile</h1>
-        </div>
-        <div class="row">
-            <div class="col-md-4 col-12">
-                <div class="mx-5">
-                    <img class="img-fluid rounded-circle border" src="img/idPhot2.JPG " alt="">
-                </div>
-                <p class="text-center py-1 m-4">
-                    黒木 研次
-                    <br>1985年６月４日生
-                </p>
+        <div class="container">
+            <div id="Profile" class="subTitle">
+                <h4 class="p-3 mb-3 bg-white"></h4>
+                <h1 class="text-center py-3 mb-md-4 display-1 ">Profile</h1>
             </div>
-            <div class="col-md-8 col-12">
-                <div class="py-4">
-                    <p class="d-inline-block py-5 mx-2">
-                        現職は営業職に勤めておりますが、場所に囚われない新しい働き方を求めて転職活動を始めました。
-                        <br>現在スクールでPHPを中心に学んでおります。コーディングによって便利で豊かな生活を提供するエンジニアは、大変魅力的でやりがいのある職種だと感じております。
+            <div class="row">
+                <div class="col-md-4 col-12">
+                    <div class="mx-5">
+                        <img class="img-fluid rounded-circle border" src="img/idPhot2.JPG " alt="">
+                    </div>
+                    <p class="text-center py-1 m-4">
+                        黒木 研次
+                        <br>1985年６月４日生
                     </p>
+                </div>
+                <div class="col-md-8 col-12">
+                    <div class="py-4">
+                        <p class="d-inline-block py-5 mx-2">
+                            現職は営業職に勤めておりますが、場所に囚われない新しい働き方を求めて転職活動を始めました。
+                            <br>現在スクールでPHPを中心に学んでおります。コーディングによって便利で豊かな生活を提供するエンジニアは、大変魅力的でやりがいのある職種だと感じております。
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
 
         <!--Skills-->
-        <div id="Skills">
-            <h4 class="p-1 mb-1 bg-white "></h4>
-            <h2 class="text-center mt-lg-5 mb-md-3 display-1 py-3">Skills</h2>
-        </div>
-        <div class="row justify-content-center">
-            <div class="card mb-4 mx-3 shadow" style="width: 18rem;">
-                <img src="img/html.png" class="card-img-top img-thumbnail mt-2" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title fw-bold">HTML/CSS</h5>
-                    <p class="card-text">レスポンシブに対応したサイトのコーディングができます。</p>
-                    <a href="samurai/bootstrap/index.html" class="btn btn-secondary">Go somewhere</a>
-                </div>
+        <div class="container">
+            <div id="Skills" class="subTitle">
+                <h4 class="p-1 mb-1 bg-white "></h4>
+                <h2 class="text-center mt-lg-5 mb-md-3 display-1 py-3">Skills</h2>
             </div>
-            <div class="card mb-4 mx-3 shadow" style="width: 18rem;">
-                <img src="img/javascript.png" class="card-img-top img-thumbnail mt-2" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title fw-bold">JavaScript</h5>
-                    <p class="card-text">変数、メソッドやクラス、DOM操作などを活用して動的な表現を実装できます。
-                    </p>
-                    <a href="#" class="btn btn-secondary">Go somewhere</a>
+            <div class="row justify-content-center">
+                <div class="card mb-4 mx-3 shadow" style="width: 18rem;">
+                    <img src="img/html.png" class="card-img-top img-thumbnail mt-2" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title fw-bold">HTML/CSS</h5>
+                        <p class="card-text">レスポンシブに対応したサイトのコーディングができます。</p>
+                        <a href="samurai/bootstrap/index.html" class="btn btn-secondary">Go somewhere</a>
+                    </div>
                 </div>
-            </div>
-            <div class="card mb-4 mx-3 shadow" style="width: 18rem;">
-                <img src="img/bootstrap.png" class="card-img-top img-thumbnail mt-2" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title fw-bold">Bootstrap</h5>
-                    <p class="card-text">フレームワークを使用してwebサイトの作成ができます。</p>
-                    <a href="#" class="btn btn-secondary">Go somewhere</a>
+                <div class="card mb-4 mx-3 shadow" style="width: 18rem;">
+                    <img src="img/javascript.png" class="card-img-top img-thumbnail mt-2" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title fw-bold">JavaScript</h5>
+                        <p class="card-text">変数、メソッドやクラス、DOM操作などを活用して動的な表現を実装できます。
+                        </p>
+                        <a href="#" class="btn btn-secondary">Go somewhere</a>
+                    </div>
                 </div>
-            </div>
-            <div class="card mb-4 mx-3 shadow" style="width: 18rem;">
-                <img src="img/jquery.png" class="card-img-top img-thumbnail mt-2 py-5" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title fw-bold">jQuely</h5>
-                    <p class="card-text">jQueryを使用して動的な表現を実装できます。</p>
-                    <a href="#" class="btn btn-secondary">Go somewhere</a>
+                <div class="card mb-4 mx-3 shadow" style="width: 18rem;">
+                    <img src="img/bootstrap.png" class="card-img-top img-thumbnail mt-2" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title fw-bold">Bootstrap</h5>
+                        <p class="card-text">フレームワークを使用してwebサイトの作成ができます。</p>
+                        <a href="#" class="btn btn-secondary">Go somewhere</a>
+                    </div>
                 </div>
-            </div>
-            <div class="card mb-4 mx-3 shadow" style="width: 18rem;">
-                <img src="img/php.png" class="card-img-top img-thumbnail mt-2　py-5" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title fw-bold">PHP</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                    <a href="#" class="btn btn-secondary">Go somewhere</a>
+                <div class="card mb-4 mx-3 shadow" style="width: 18rem;">
+                    <img src="img/jquery.png" class="card-img-top img-thumbnail mt-2 py-5" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title fw-bold">jQuely</h5>
+                        <p class="card-text">jQueryを使用して動的な表現を実装できます。</p>
+                        <a href="#" class="btn btn-secondary">Go somewhere</a>
+                    </div>
                 </div>
-            </div>
-            <div class="card mb-4 mx-3 shadow" style="width: 18rem;">
-                <img src="img/laravel-1.png" class="card-img-top img-thumbnail mt-2" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title fw-bold">Lalavel</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                    <a href="#" class="btn btn-secondary">Go somewhere</a>
+                <div class="card mb-4 mx-3 shadow" style="width: 18rem;">
+                    <img src="img/php.png" class="card-img-top img-thumbnail mt-2　py-5" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title fw-bold">PHP</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the
+                            card's content.</p>
+                        <a href="#" class="btn btn-secondary">Go somewhere</a>
+                    </div>
                 </div>
+                <div class="card mb-4 mx-3 shadow" style="width: 18rem;">
+                    <img src="img/laravel-1.png" class="card-img-top img-thumbnail mt-2" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title fw-bold">Lalavel</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the
+                            card's content.</p>
+                        <a href="#" class="btn btn-secondary">Go somewhere</a>
+                    </div>
 
+                </div>
             </div>
-        </div>
-        <div>
-            <p class="py-3 mx-3">営業職にてコミュニケーション能力、リーダーシップやマネジメントを学びました。営業職で得たスキルはどの職種でも役に立つものだと考えております。
-                <br>プログラミングに関しては、独学とスクールで７ヶ月学習しており、コーディングだけでなくgithubでバージョン管理、共同作業の方法等エンジニアに必要な知識も学ばせていただいております。
-            </p>
+
+            <div>
+                <p class="py-3 mx-3">営業職にてコミュニケーション能力、リーダーシップやマネジメントを学びました。営業職で得たスキルはどの職種でも役に立つものだと考えております。
+                    <br>プログラミングに関しては、独学とスクールで７ヶ月学習しており、コーディングだけでなくgithubでバージョン管理、共同作業の方法等エンジニアに必要な知識も学ばせていただいております。
+                </p>
+            </div>
         </div>
 
         <!--Works-->
-        <div id="Works">
-            <h4 class="p-1 mb-1 bg-white"></h4>
-            <h2 class="text-center mt-lg-5 mb-md-3 display-1 py-3">Work</h2>
-        </div>
-        <div>
-            <div class="d-flex flex-wrap justify-content-center">
-                <div class="col-md-12 col-12 p-0 align-self-center">
-                    <img class="img-fluid img-thumbnail shadow" src="img/g.jpeg">
-                    <p class="py-3 mx-3">
-                        日々の営業職でもっと使いやすいTODOリストのアプリケーションがあればと思い作成しました。
-                        ルート営業職は反復行為が多いため、そういったニーズに合うように工夫しています。
-                    </p>
+        <div class="container">
+            <div id="Works" class="subTitle">
+                <h4 class="p-1 mb-1 bg-white"></h4>
+                <h2 class="text-center mt-lg-5 mb-md-3 display-1 py-3">Work</h2>
+            </div>
+            <div>
+                <div class="d-flex flex-wrap justify-content-center">
+                    <div class="col-md-12 col-12 p-0 align-self-center">
+                        <img class="img-fluid img-thumbnail shadow" src="img/g.jpeg">
+                        <p class="py-3 mx-3">
+                            日々の営業職でもっと使いやすいTODOリストのアプリケーションがあればと思い作成しました。
+                            ルート営業職は反復行為が多いため、そういったニーズに合うように工夫しています。
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 
     <!--Contacts-->
-    <footer class="bg-white">
+    <footer class="bg-white" class="subTitle">
         <div class="container">
             <div id="Contacts">
                 <h4 class="p-1 mb-1 bg-white"></h4>
@@ -195,7 +204,7 @@
                         <a class="btn btn-secondary my-4" href="https://github.com/kenjikuroki" role="button">github</a>
                         <h3 class="p-1 m-2"></h3>
                     </div>
-                   
+
                 </div>
 
                 <!--twitter-->
@@ -222,6 +231,39 @@
         integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
         crossorigin="anonymous"></script>
 
+    <script src="jquery-3.6.0.min.js"></script>
+    <script>
+        $(function () {
+            var effect_pos = 300; // 画面下からどの位置でフェードさせるか(px)
+            var effect_move = 50; // どのぐらい要素を動かすか(px)
+            var effect_time = 800; // エフェクトの時間(ms) 1秒なら1000
+
+            // フェードする前のcssを定義
+            $('.container').css({
+                opacity: 0,
+                transform: 'translateY(' + effect_move + 'px)',
+                transition: effect_time + 'ms'
+            });
+
+            // スクロールまたはロードするたびに実行
+            $(window).on('scroll load', function () {
+                var scroll_top = $(this).scrollTop();
+                var scroll_btm = scroll_top + $(this).height();
+                effect_pos = scroll_btm - effect_pos;
+
+                // effect_posがthis_posを超えたとき、エフェクトが発動
+                $('.container').each(function () {
+                    var this_pos = $(this).offset().top;
+                    if (effect_pos > this_pos) {
+                        $(this).css({
+                            opacity: 1,
+                            transform: 'translateY(0)'
+                        });
+                    }
+                });
+            });
+        });
+    </script>
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     <!--
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
