--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="container">
             <div id="Profile" class="subTitle">
                 <h4 class="p-3 mb-3 bg-white"></h4>
-                <h1 class="text-center py-3 mb-md-4 display-1 ">Profile</h1>
+                <h2 class="text-center py-3 mb-md-4 display-1 title">Profile</h2>
             </div>
             <div class="row">
                 <div class="col-md-4 col-12">
@@ -81,7 +81,7 @@
         <div class="container">
             <div id="Skills" class="subTitle">
                 <h4 class="p-1 mb-1 bg-white "></h4>
-                <h2 class="text-center mt-lg-5 mb-md-3 display-1 py-3">Skills</h2>
+                <h2 class="text-center mt-lg-5 mb-md-3 display-1 py-3 title">Skills</h2>
             </div>
             <div class="row justify-content-center">
                 <div class="card mb-4 mx-3 shadow" style="width: 18rem;">
@@ -151,7 +151,7 @@
         <div class="container">
             <div id="Works" class="subTitle">
                 <h4 class="p-1 mb-1 bg-white"></h4>
-                <h2 class="text-center mt-lg-5 mb-md-3 display-1 py-3">Work</h2>
+                <h2 class="text-center mt-lg-5 mb-md-3 display-1 py-3 title">Work</h2>
             </div>
             <div>
                 <div class="d-flex flex-wrap justify-content-center">
@@ -172,7 +172,7 @@
         <div class="container">
             <div id="Contacts">
                 <h4 class="p-1 mb-1 bg-white"></h4>
-                <h2 class="text-center mt-lg-5 mb-md-4 display-1 py-3">Contact</h2>
+                <h2 class="text-center mt-lg-5 mb-md-4 display-1 py-3 title fadeIn_left inview">Contact</h2>
             </div>
             <div class="row mb-5">
                 <div class="col-md-4 col-12">
@@ -232,37 +232,16 @@
         crossorigin="anonymous"></script>
 
     <script src="jquery-3.6.0.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script>
-        $(function () {
-            var effect_pos = 300; // 画面下からどの位置でフェードさせるか(px)
-            var effect_move = 50; // どのぐらい要素を動かすか(px)
-            var effect_time = 800; // エフェクトの時間(ms) 1秒なら1000
-
-            // フェードする前のcssを定義
-            $('.container').css({
-                opacity: 0,
-                transform: 'translateY(' + effect_move + 'px)',
-                transition: effect_time + 'ms'
-            });
-
-            // スクロールまたはロードするたびに実行
-            $(window).on('scroll load', function () {
-                var scroll_top = $(this).scrollTop();
-                var scroll_btm = scroll_top + $(this).height();
-                effect_pos = scroll_btm - effect_pos;
-
-                // effect_posがthis_posを超えたとき、エフェクトが発動
-                $('.container').each(function () {
-                    var this_pos = $(this).offset().top;
-                    if (effect_pos > this_pos) {
-                        $(this).css({
-                            opacity: 1,
-                            transform: 'translateY(0)'
-                        });
-                    }
-                });
-            });
-        });
+   $(function(){
+  $(".inview").on("inview", function (event, isInView) {
+    if (isInView) {
+      $(this).stop().addClass("is-show");
+    }
+  });
+});
+       
     </script>
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     <!--
